--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="style.css" />
     <title>IP Address Tracker</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <h1 class="header-title">IP Address Tracker</h1>
+
+      <form class="form">
+        <input class="input-ip" type="text" placeholder="Insira um número IP"> 
+        <button class="btn" type="submit">
+          <img src="./images/icon-arrow.svg" alt="Ícone de seta" />
+        </button>
+        </input>
+        
+      </form>
+    </header>
+  </body>
 </html>
