Atualização do script

--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
       <h1 class="header-title">IP Address Tracker</h1>
 
       <form class="form">
-        <input class="input-ip" type="text" placeholder="Insira um número IP"> 
-        <button class="btn" type="submit">
+        <input
+          id="ip-input"
+          class="input-ip"
+          type="text"
+          placeholder="Insira um número IP"
+        />
+
+        <button class="btn">
           <img src="./images/icon-arrow.svg" alt="Ícone de seta" />
         </button>
-        </input>
-        
       </form>
     </header>
+
+    <script src="./script.js"></script>
   </body>
 </html>
