--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
       href="./images/favicon-32x32.png"
     />
     <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""
+    />
+    <script
+      src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
+      integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
+      crossorigin=""
+    ></script>
     <title>IP Address Tracker</title>
   </head>
   <body>
@@ -29,6 +40,33 @@
         </button>
       </form>
     </header>
+
+    <main class="main">
+      <section class="main-section">
+        <div class="section ip-address mobile">
+          <span class="span">IP ADDRESS</span>
+          <p id="ip" class="section-info"></p>
+        </div>
+        <span class="divider"></span>
+        <div class="section location mobile">
+          <span class="span">LOCATION</span>
+          <p id="location" class="section-info"></p>
+        </div>
+        <span class="divider"></span>
+        <div class="section timezone mobile">
+          <span class="span">TIMEZONE</span>
+          <p id="timezone" class="section-info"></p>
+        </div>
+        <span class="divider"></span>
+
+        <div class="section isp mobile">
+          <span class="span">ISP</span>
+          <p id="isp" class="section-info"></p>
+        </div>
+      </section>
+    </main>
+
+    <div id="map"></div>
 
     <script src="./script.js"></script>
   </body>
